--- a/scss/layout/_what-we-do-section.scss
+++ b/scss/layout/_what-we-do-section.scss
@@ -20,7 +20,7 @@
         @media screen and (min-width: 0) and (max-width:1199px)
         {max-width: 100%; display: none; } } 
     }}
-    .what-we-do__overlay{background: rgba(47, 48, 58, 0.8); display:flex; gap: 30px; align-items: center; justify-content: center;  position: absolute; bottom:0px  }
+    .what-we-do__overlay{background: rgba(47, 48, 58, 0.8); display:flex; gap: 30px; align-items: center; justify-content: center;  position: absolute; bottom:0px    }
     .what-we-do__overlay-text{font-family: 'Roboto';  
       font-style: normal;
       font-weight: 700;
@@ -35,5 +35,8 @@
       align-items: center;
       width: 370px;
       color: #FFFFFF;
-      }
+      @media screen and (min-width: 0) and (max-width:1199px)
+      {max-width: 100%; display: none; } 
+      @media screen and (min-width: 480px) and (max-width:1199px )
+      {display: none; padding-right: 15px;  width: 100%; margin-bottom: 30px;}}
       .what-we-do__item{position: relative;}
