--- a/css/main.scss.css
+++ b/css/main.scss.css
@@ -455,6 +455,16 @@ body {
   padding-top: 85px;
   padding-bottom: 103px;
 }
+@media screen and (min-width: 0) and (max-width: 1199px) {
+  .project-section {
+    padding-top: 60px;
+  }
+}
+@media screen and (min-width: 0) and (max-width: 1199px) and (min-width: 768px) and (max-width: 1199px) {
+  .project-section {
+    padding-top: 60px;
+  }
+}
 .project-section__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -481,8 +491,7 @@ body {
     max-width: 720px;
   }
 }
-
-.project-section__image-list {
+.project-section .project-section__image-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,12 +503,12 @@ body {
   margin-bottom: 0;
 }
 @media screen and (min-width: 0) and (max-width: 767px) {
-  .project-section__image-list {
+  .project-section .project-section__image-list {
     max-width: 448px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .project-section__image-list {
+  .project-section .project-section__image-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
     -webkit-box-pack: center;
@@ -507,18 +516,17 @@ body {
             justify-content: center;
   }
 }
-.project-section__portfolio-item {
+.project-section .project-section__portfolio-item {
   position: relative;
   overflow: hidden;
 }
-
-.project-section__image-shadow {
+.project-section .project-section__image-shadow {
   -webkit-transition: color, 250ms;
   transition: color, 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-section__image-shadow:hover {
+.project-section .project-section__image-shadow:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
@@ -528,7 +536,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-section__image-shadow .project-section__name-container {
+.project-section .project-section__image-shadow .project-section__name-container {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -539,19 +547,25 @@ body {
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
-.project-section__image-shadow .project-section__position-name {
+.project-section .project-section__image-shadow .project-section__position-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
 }
-.project-section__image-shadow .project-section__position-type {
+.project-section .project-section__image-shadow .project-section__position-type {
   font-style: normal;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project-section__name-container--first {
+    min-height: 143.33px;
+  }
 }
 
 .project-section__portfolio-item:hover .project-section__overlay {
@@ -625,18 +639,27 @@ body {
 }
 
 .js-menu-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 100vh;
+  height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 48px;
+  padding-left: 40px;
+  padding-bottom: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100%;
+  width: 448px;
 }
 
 .js-close-menu {
   position: absolute;
   top: 10px;
   right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   background-color: #ffffff;
   width: 30px;
   height: 30px;
@@ -655,11 +678,19 @@ body {
 }
 
 .js-menu__list {
-  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: auto;
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
+  margin-bottom: auto;
 }
 
 .js-menu__item__item--last {
-  margin-bottom: 306px;
+  margin-bottom: auto;
 }
 
 .js-menu__item {
@@ -671,8 +702,8 @@ body {
   text-align: left;
   letter-spacing: 0.02em;
   color: #212121;
-  padding-top: 32px;
-  width: 100%;
+  padding-top: 0;
+  max-width: 100%;
   color: #212121;
 }
 
@@ -700,14 +731,17 @@ body {
 }
 
 .mobile-menu__social-list {
-  margin-top: 64px;
+  width: 448px;
+  max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 0;
+  padding: 0;
   gap: 10px;
-  padding-right: 83px;
-  width: 100%;
-  height: 100%;
+  margin-top: 64px;
 }
 
 .mobile-menu__contact--mail {
@@ -719,7 +753,8 @@ body {
   letter-spacing: 0.02em;
   color: #757575;
   width: 100%;
-  margin-top: 32px;
+  height: 100%;
+  margin-bottom: auto;
 }
 
 .mobile-menu__contact--phone {
@@ -728,9 +763,13 @@ body {
   font-weight: 500;
   font-size: 34px;
   line-height: 40px;
+  margin-bottom: 0;
   /* identical to box height */
   letter-spacing: 0.02em;
+  height: 100%;
+  margin: 0;
   color: #2196F3;
+  height: 100%;
 }
 
 .mobile-menu__social-item {
@@ -742,11 +781,45 @@ body {
   /* identical to box height, or 122% */
   letter-spacing: 0.02em;
   color: #2196F3;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.js-menu__item {
+  margin-bottom: 32px;
+}
+
+.js-menu__list-phone {
+  max-height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .mobile-menu__contact--mail--test {
   margin-top: 32px;
+}
+
+.mobile-menu__social-link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height, or 122% */
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mobile-menu__social-item:not(:last-child) .mobile-menu__social-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .header__container {
@@ -996,7 +1069,7 @@ header.no-transparency {
 }
 @media screen and (min-width: 0px) and (max-width: 767px) {
   .main-window {
-    width: 100%;
+    max-width: 100%;
     display: block;
   }
 }
@@ -1024,7 +1097,7 @@ header.no-transparency {
 @media screen and (min-width: 0) and (max-width: 767px) {
   .main-window__title {
     max-width: 360px;
-    display: block;
+    margin-right: 0;
     font-size: 26px;
     line-height: 1.6153846154;
   }
@@ -1053,6 +1126,18 @@ header.no-transparency {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../images/studiopage/Background-hero/main-background-mobile/1.jpg") 1x, url("../images/studiopage/Background-hero/main-background-mobile/2.jpg") 2x);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../images/studiopage/Background-hero/main-background-mobile/1.jpg") 1x, url("../images/studiopage/Background-hero/main-background-mobile/2.jpg") 2x);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../images/studiopage/Background-hero/main-background-mobile/1.jpg") 1x, url("../images/studiopage/Background-hero/main-background-mobile/2.jpg") 2x);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-window {
+    font-size: 26px;
+    display: block;
+    background-position: auto;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../images/studiopage/Background-hero/destop/1.jpg") 1x, url("../images/studiopage/Background-hero/destop/2.jpg") 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../images/studiopage/Background-hero/destop/1.jpg") 1x, url("../images/studiopage/Background-hero/destop/2.jpg") 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../images/studiopage/Background-hero/destop/1.jpg") 1x, url("../images/studiopage/Background-hero/destop/2.jpg") 2x);
   }
 }
 
@@ -1472,6 +1557,7 @@ header.no-transparency {
             flex-direction: column;
     padding-top: 60px;
     padding-bottom: 60px;
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1496,6 +1582,7 @@ header.no-transparency {
   margin: 0;
   padding: 0;
   gap: 30px;
+  width: 100%;
 }
 .clients-section .clients-section__list {
   /**tablet*/
@@ -1504,10 +1591,10 @@ header.no-transparency {
 @media screen and (min-width: 0) and (max-width: 767px) {
   .clients-section .clients-section__list {
     display: grid;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     grid-template-columns: 1fr 1fr;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1525,7 +1612,7 @@ header.no-transparency {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #AFB1B8;
   color: #AFB1B8;
@@ -1540,6 +1627,7 @@ header.no-transparency {
   transition: color, 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 100%;
   /**tablet*/
 }
 @media screen and (min-width: 0) and (max-width: 767px) {
@@ -1550,13 +1638,15 @@ header.no-transparency {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    max-width: 210px;
+    width: 210px;
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-section .clients-section__logo-link {
     max-width: 720px;
     padding: 0;
+    width: 226px;
   }
 }
 .clients-section .clients-section__logo-link:focus {
@@ -1578,6 +1668,7 @@ header.no-transparency {
   transition: color, 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 100%;
 }
 
 .footer {
@@ -1600,7 +1691,7 @@ header.no-transparency {
 }
 @media screen and (min-width: 0) and (max-width: 767px) {
   .footer {
-    max-width: 448px;
+    max-width: 100%;
     display: block;
     text-align: center;
     margin-left: auto;
@@ -1629,6 +1720,7 @@ header.no-transparency {
 }
 @media screen and (min-width: 0) and (max-width: 767px) {
   .footer .footer__container {
+    width: 448px;
     max-width: 100%;
     display: inline-block;
     text-align: center;
@@ -2289,10 +2381,11 @@ header.no-transparency {
     margin-right: 0;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 0) and (max-width: 1199px) {
   .subscribe__input {
     max-width: 100%;
-    min-width: 450px;
+    width: 450px;
+    max-width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
