--- a/scss/components/_galery.scss
+++ b/scss/components/_galery.scss
@@ -1,7 +1,10 @@
 .project-section {
   padding-top: 85px;
   padding-bottom: 103px;
-
+  @media screen and (min-width: 0) and (max-width:1199px)
+  {  padding-top: 60px;
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { padding-top: 60px; }} 
   &__list {
     display: flex;
     gap: 8px;
@@ -9,11 +12,11 @@
     margin: 0;
     padding-left: 0;
     @media screen and (min-width: 0) and (max-width:767px)
-    {max-width: 448px; flex-wrap: wrap; justify-content: left;
+    {max-width: 448px; flex-wrap: wrap; justify-content: left; 
       @media screen and (min-width: 768px) and (max-width:1199px)
-      {max-width: 720px; }} 
+      {max-width: 720px; ; }} 
   }
-}
+
 
 .project-section {
   &__image-list {
@@ -80,3 +83,6 @@
     color: #757575;
   }
 }
+}
+.project-section__name-container--first{@media screen and (min-width: 768px) and (max-width:1199px)
+  { min-height: 143.33px; }} 
