--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,15 +1,22 @@
 .js-menu-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-
+    position: fixed;
+    width: 100vh;
+    height: 100vh;
+    flex-direction: column;
+    padding-top: 48px;
+    padding-left: 40px;
+    padding-bottom: 48px;
+    display: flex;
+    max-width: 100%;
+    width: 448px;
+    
 }
 
 .js-close-menu {
     position: absolute;
     top: 10px;
     right: 10px;
-    display: flex;
+    
     background-color: #ffffff;
     width: 30px;
     height: 30px;
@@ -23,10 +30,20 @@
 }
 
 .js-menu__list {
+   
+    flex-direction: column;
+    margin-bottom: auto;
+    margin: 0;
+    max-width: 100%;
+    padding: 0;
+    margin-bottom: auto;
     
-    width: 100%
 }
-.js-menu__item__item--last{margin-bottom: 306px;}
+
+.js-menu__item__item--last {
+    margin-bottom: auto;
+}
+
 .js-menu__item {
     font-family: 'Roboto';
     font-style: normal;
@@ -36,13 +53,14 @@
     text-align: left;
     letter-spacing: 0.02em;
     color: #212121;
-    padding-top: 32px;
-    width: 100%;
-    color:#212121;
-    
+    padding-top: 0;
+    max-width: 100%;
+    color: #212121;
+
 }
 
 .js-menu-container {
+    
     position: fixed;
     top: 0;
     margin-left: auto;
@@ -54,19 +72,22 @@
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+
 }
-.js-menu-container.is-open{transform: translateX(0)}
+
+.js-menu-container.is-open {
+    transform: translateX(0)
+}
 
 .mobile-menu__social-list {
-    margin-top: 64px;
-    display:flex;
-    gap: 10px;
-    padding-right: 83px;
-    width: 100%;
-    height: 100%;
-    
-    
-}
+width: 448px;
+max-width: 100%;
+    display: flex;
+     flex-wrap: wrap;
+  margin-bottom: 0;
+  padding: 0;
+  gap: 10px;
+margin-top:64px}
 
 .mobile-menu__contact--mail {
     font-family: 'Roboto';
@@ -78,9 +99,9 @@
 
     color: #757575;
     width: 100%;
+    height: 100%;
+    margin-bottom: auto;
 
-   margin-top: 32px;
-    
 }
 
 .mobile-menu__contact--phone {
@@ -89,15 +110,44 @@
     font-weight: 500;
     font-size: 34px;
     line-height: 40px;
+    margin-bottom: 0;
     /* identical to box height */
+    letter-spacing: 0.02em;
+    height: 100%;
+    margin:0;
+    color: #2196F3;
+    height: 100%;
+
+}
+
+.mobile-menu__social-item {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    /* identical to box height, or 122% */
 
     letter-spacing: 0.02em;
-
-    color: #2196F3;
-
     
+    color: #2196F3;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 0;
+    display: flex;
+    
+
 }
-.mobile-menu__social-item{font-family: 'Roboto';
+
+.js-menu__item{margin-bottom: 32px;}
+.js-menu__list-phone {
+    max-height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.mobile-menu__contact--mail--test{margin-top: 32px;}
+
+.mobile-menu__social-link{ font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -106,8 +156,17 @@
     
     letter-spacing: 0.02em;
     
-    color: #2196F3;
-    width: 100%;
+    
+
+    color: #2196F3; }
+    
    
-    }
-    .mobile-menu__contact--mail--test{margin-top: 32px;}
+       
+    .mobile-menu__social-item:not(:last-child) 
+    .mobile-menu__social-link {
+        display: flex;
+      
+        padding-right: 10px;
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+      }
+      
