--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -2,7 +2,7 @@
     padding-top: 94px;
     padding-bottom: 94px;
     @media screen and (min-width: 0) and (max-width:767px)
-    {flex-direction: column; padding-top: 60px; padding-bottom: 60px; }  
+    {flex-direction: column; padding-top: 60px; padding-bottom: 60px; width: 100%; }  
     @media screen and (min-width: 768px) and (max-width:1199px)
     { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
   
@@ -11,11 +11,12 @@
     justify-content: center;
     margin: 0;
     padding: 0;
-    gap: 30px;}
+    gap: 30px;
+  width: 100%;}
 
     .clients-section__list{
     @media screen and (min-width: 0) and (max-width:767px)
-    {display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}
+    {display: grid; flex-wrap: wrap; grid-template-columns: 1fr 1fr;width: 100%;}
     
     /**tablet*/
     @media screen and (min-width: 768px) and (max-width:1199px)
@@ -26,7 +27,7 @@
   
   .clients-section__logo-link {
     display: flex;
-    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid #AFB1B8;
     color: #AFB1B8;
@@ -35,13 +36,14 @@
     justify-content: center;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    max-width: 100%;
 
     @media screen and (min-width: 0) and (max-width:767px)
-    {display: flex; justify-content: center; max-width: 210px;}
+    {display: flex; justify-content: center; width: 210px; width: 100%;}
     
     /**tablet*/
     @media screen and (min-width: 768px) and (max-width:1199px)
-    { max-width: 720px; padding:0;}
+    { max-width: 720px; padding:0; width: 226px;}
 
     &:focus{
       color: var(--active-button-color);
@@ -57,5 +59,7 @@
 .clients-section__logo-icon {
     fill: currentColor;
     transition: color, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    max-width: 100%;
+    
   }}
