--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,7 +9,7 @@
       justify-content: space-evenly;
     /**Mobile*/
     @media screen and (min-width: 0) and (max-width:767px)
-    {max-width: 448px;   display: block;
+    {max-width: 100%;   display: block;
       text-align: center;
       margin-left: auto;
       margin-right: auto;}
@@ -25,7 +25,7 @@
       
   }
   .footer__container{@media screen and (min-width: 0) and (max-width:767px)
-    {max-width: 100%;  display: inline-block;
+    {width: 448px; max-width: 100%;  display: inline-block;
       text-align: center;
       margin-left: auto;
       margin-right: auto;
