--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -32,7 +32,7 @@
   margin-left: auto;
 
   @media screen and (min-width: 0px) and (max-width:767px) {
-    width: 100%;
+    max-width: 100%;
     display: block
   }
 
@@ -61,7 +61,7 @@
 
     @media screen and (min-width: 0) and (max-width:767px) {
       max-width: 360px;
-      display: block;
+     margin-right: 0;
       font-size: 26px;
       line-height: calc(42/26)
     }
@@ -90,4 +90,12 @@
 
 
   }
-}
+  @media screen and (min-width: 1200px) {
+    
+    font-size: 26px;
+    display: block;
+    background-position: auto;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../images/studiopage/Background-hero/destop/1.jpg") 1x,
+        url("../images/studiopage/Background-hero/destop/2.jpg") 2x);
+}}
