--- a/scss/layout/_subscribe.scss
+++ b/scss/layout/_subscribe.scss
@@ -34,8 +34,8 @@
   
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
       border-radius: 4px;  min-height: 50px; padding-left: 16px; color: white;
-      @media screen and (min-width: 768px) 
-  {   max-width: 100%; min-width: 450px; 
+      @media screen and (min-width: 0)  and (max-width: 1199px)
+  {   max-width: 100%; width: 450px; max-width: 100%;
     }
       @media screen and (min-width: 1200px) 
   {   max-width: 100%;min-width: 356px; 
