--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -87,7 +87,8 @@ max-width: 100%;
   margin-bottom: 0;
   padding: 0;
   gap: 10px;
-margin-top:64px}
+margin-top:64px;
+margin-bottom: 5px;}
 
 .mobile-menu__contact--mail {
     font-family: 'Roboto';
