--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -7,7 +7,7 @@
     padding-left: 40px;
     padding-bottom: 48px;
     display: flex;
-    max-width: 100%;
+    width: 100%;
     width: 448px;
     
 }
