--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -27,8 +27,9 @@
     border: transparent;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:hover{fill: var(--active-button-color);}
 }
-
 .js-menu__list {
    
     flex-direction: column;
