--- a/scss/layout/_props-section.scss
+++ b/scss/layout/_props-section.scss
@@ -88,3 +88,5 @@
     @media screen and (min-width: 0) and (max-width:767px)
     { width: 100%; text-align: left; padding-bottom: 30px;} }
  
+.props-section__text--last{@media screen and (min-width: 0) and (max-width:767px)
+  { width: 100%; text-align: left; padding-bottom: 60px;}}
