--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -27,7 +27,7 @@
     {width: 720px;  display: none;  }
    
     @media screen and (min-width: 768px) and (max-width:1199px)
-    {max-width: 720px; display: none; display: table; margin-bottom: 21px; margin-top:21px; padding: 0;} 
+    {max-width: 720px;  display: table; margin-bottom: 21px; margin-top:21px; padding: 0;} 
    
 
     &__icon{fill: currentColor;
@@ -35,7 +35,8 @@
         @media screen and (min-width: 0) and (max-width:1199px)
         { width:14px ; height:10px ;}}
     
-    }
+        white-space: nowrap;
+}
   
   
   
