--- a/scss/components/_galery.scss
+++ b/scss/components/_galery.scss
@@ -1,10 +1,10 @@
 .project-section {
-  padding-top: 85px;
-  padding-bottom: 103px;
+  padding-top: 94px;
+  padding-bottom: 94px;
   @media screen and (min-width: 0) and (max-width:1199px)
-  {  padding-top: 60px;
+  {  padding-top: 60px; padding-bottom: 60px;
     @media screen and (min-width: 768px) and (max-width:1199px)
-    { padding-top: 60px; }} 
+    { padding-top: 60px; padding-bottom: 60px;}} 
   &__list {
     display: flex;
     gap: 8px;
@@ -24,12 +24,12 @@
     gap: 30px;
     flex-wrap: wrap;
     padding-left: 0;
-    margin-top: 50px;
+    margin-top: 34px;
     margin-bottom: 0;
     @media screen and (min-width: 0) and (max-width:767px)
-    {max-width: 448px;} 
+    {max-width: 448px; margin-top: 40px;} 
     @media screen and (min-width: 768px) and (max-width:1199px)
-    { display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}
+    { display: grid; grid-template-columns: 1fr 1fr; justify-content: center; margin-top: 14px;}
   }
 
   &__portfolio-item {
