--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -46,7 +46,7 @@
       
        margin-bottom: 60px; margin-left: 0;
        @media screen and (min-width: 768px) and (max-width:1199px)
-       { display: block; }};
+       { display: block; text-align: center; }};
     
     
        .footer__side{ @media screen and (min-width: 0) and (max-width:767px)
