--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -1,6 +1,6 @@
 .main-window__container {
   text-align: center;
-  min-height: 600px;
+  
 
   @media screen and (min-width: 0px)and (max-width:768px) {
     max-width: 448px;
@@ -11,7 +11,7 @@
 
   /**tablet*/
   @media screen and (min-width: 768px) and (max-width:1199px) {
-    width: 720px;
+    
   }
 
   @media screen and (width:1200px) {
@@ -25,21 +25,21 @@
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/studiopage/8.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  max-height: 600px;
+  padding-bottom: 200px;
   max-width: 1600px;
   background-position: center;
   margin-right: auto;
   margin-left: auto;
 
   @media screen and (min-width: 0px) and (max-width:767px) {
-    max-width: 100%;
+    max-width: 448px;
     display: block
   }
 
   ;
 
   @media screen and (min-width: 768px) and (max-width:1199px) {
-    max-width: 100%;
+    width: 100%;
     display: block
   }
 
@@ -60,15 +60,19 @@
     }
 
     @media screen and (min-width: 0) and (max-width:767px) {
-      max-width: 360px;
+      max-width: 440px;
      margin-right: 0;
       font-size: 26px;
       line-height: calc(42/26)
+      
     }
   }
 
   @media screen and (min-width: 768px) and (max-width:1199px) {
     max-width: 100%;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    
     display: block;
     font-size: 26px;
     background-position: auto;
@@ -82,6 +86,9 @@
   @media screen and (min-width: 0) and (max-width:767px) {
     max-width: 100%;
     font-size: 26px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    
     display: block;
     background-position: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
