--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,5 +1,6 @@
 .menu {
   &__item { font-weight: 500;
+    
 
     font-size: 14px;
     line-height: 16px;
@@ -10,7 +11,7 @@
     cursor: pointer;
     transition: color, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
+   
 
     
 
@@ -46,7 +47,7 @@
    
 }
 
-  
+.menu__button-burger:hover{fill: var(--active-button-color);}
 
   
 
